Completed the assignment

--- a/week-02/Exercise.ipynb
+++ b/week-02/Exercise.ipynb
@@ -152,11 +152,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fizz\n",
+      "fizzbuzz\n",
+      "buzz\n"
+     ]
+    }
+   ],
    "source": [
-    "# Solve Problem fizzbuzz here:\n"
+    "# Solve Problem fizzbuzz here:\n",
+    "def fizzbuzz(num): \n",
+    "    if num % 3 == 0 and num % 5 == 0:\n",
+    "        print('fizzbuzz')\n",
+    "    elif num % 3 == 0:\n",
+    "        print('fizz')\n",
+    "    elif num % 5 == 0:\n",
+    "        print('buzz')\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "fizzbuzz(9)\n",
+    "fizzbuzz(15)\n",
+    "fizzbuzz(20)"
    ]
   },
   {
@@ -175,13 +198,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Michele', 'Sara', 'Robin'}\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve problem here:\n",
     "\n",
-    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n"
+    "names = [\"Michele\", \"Robin\", \"Sara\", \"Michele\"]\n",
+    "\n",
+    "def removeDuplicate(names):\n",
+    "    # using set which data structure that not allow duplicate element\n",
+    "    uniqueNames = set()\n",
+    "    \n",
+    "    for ele in names:\n",
+    "        uniqueNames.add(ele)\n",
+    "        \n",
+    "    return uniqueNames\n",
+    "\n",
+    "print(removeDuplicate(names))\n"
    ]
   },
   {
@@ -200,12 +242,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 25]\n"
+     ]
+    }
+   ],
    "source": [
     "# Solve problem here:\n",
-    "input_list = [5, 10, 99, 20, 25]"
+    "input_list = [5, 10, 99, 20, 25]\n",
+    "output_list = []\n",
+    "\n",
+    "output_list.append(input_list[0])\n",
+    "output_list.append(input_list[-1])\n",
+    "\n",
+    "print(output_list)"
    ]
   },
   {
@@ -225,15 +281,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-10-ca9e2b626fbd>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-ca9e2b626fbd>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
      ]
     }
    ],
@@ -242,7 +297,15 @@
     "\n",
     "def your_function(a, b, c):\n",
     "    # Fill in your code below and return max value of a, b, c\n",
-    "    "
+    "    max = a\n",
+    "    if b > max:\n",
+    "        max = b\n",
+    "    if c > max:\n",
+    "        max = c\n",
+    "        \n",
+    "    return max\n",
+    "        \n",
+    "print(your_function(1, 5, 10))"
    ]
   },
   {
