done exercise, excpet extra credit

--- a/week-02/Exercise.ipynb
+++ b/week-02/Exercise.ipynb
@@ -69,7 +69,8 @@
     "\n",
     "for title_name in my_list:\n",
     "    print(title_name)\n",
-    "\n"
+    "\n",
+    "#print(my_list)"
    ]
   },
   {
@@ -175,7 +176,7 @@
     "    elif num % 5 == 0:\n",
     "        print('buzz')\n",
     "    else:\n",
-    "        return None\n",
+    "        return 'None'\n",
     "\n",
     "fizzbuzz(9)\n",
     "fizzbuzz(15)\n",
@@ -223,6 +224,8 @@
     "        \n",
     "    return uniqueNames\n",
     "\n",
+    "    # return list(set(names))\n",
+    "\n",
     "print(removeDuplicate(names))\n"
    ]
   },
@@ -242,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -256,12 +259,15 @@
    "source": [
     "# Solve problem here:\n",
     "input_list = [5, 10, 99, 20, 25]\n",
-    "output_list = []\n",
     "\n",
-    "output_list.append(input_list[0])\n",
-    "output_list.append(input_list[-1])\n",
+    "def firstLast(input):\n",
+    "    output_list = []\n",
+    "    output_list.append(input_list[0])\n",
+    "    output_list.append(input_list[-1])\n",
     "\n",
-    "print(output_list)"
+    "    return output_list\n",
+    "\n",
+    "print(firstLast(input_list))"
    ]
   },
   {
@@ -281,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +311,7 @@
     "        \n",
     "    return max\n",
     "        \n",
-    "print(your_function(1, 5, 10))"
+    "print(your_function(7, 5, 10))"
    ]
   },
   {
