--- a/week-03/Exercise.ipynb
+++ b/week-03/Exercise.ipynb
@@ -111,11 +111,11 @@
    "metadata": {},
    "source": [
     "## #4 Write a Python program to count the number of each character of a given text of a text file.\n",
+    "* Use a dictionary in which the keys of the dictionary are the characters, and the val\n",
     "* Use the text file called 'lil-wayne.txt' in the data folder.  \n",
-    "* Convert all the characters to uppercase first, then count them.  \n",
-    "* Use a dictionary in which the keys of the dictionary are the characters, and the values are the counts of that character. \n",
+    "* Convert all the characters to uppercase first, then count them.  ues are the counts of that character. \n",
     "\n",
-    "Expected Result:  `{'D': 74, 'W': 63, 'A': 211, 'Y': 44, 'N': 165, 'E': 274, ' ': 522, 'M': 77, 'I': 185, 'C': 60, 'H': 122, 'L': 126, 'R': 152, 'T': 180, 'J': 8, '.': 26, '(': 12, 'B': 59, 'O': 145, 'S': 152, 'P': 39, '2': 24, '7': 7, ',': 37, '1': 28, '9': 16, '8': 6, ')': 12, '[': 14, ']': 14, 'K': 13, 'F': 44, 'G': 53, 'X': 5, 'U': 66, 'V': 20, '3': 2, '4': 4, '5': 5, '6': 3, '0': 36, '\\n': 6, '-': 6, ';': 1, '!': 1, '\"': 8, \"'\": 3, '—': 1}`"
+    "    Expected Result:  `{'D': 74, 'W': 63, 'A': 211, 'Y': 44, 'N': 165, 'E': 274, ' ': 522, 'M': 77, 'I': 185, 'C': 60, 'H': 122, 'L': 126, 'R': 152, 'T': 180, 'J': 8, '.': 26, '(': 12, 'B': 59, 'O': 145, 'S': 152, 'P': 39, '2': 24, '7': 7, ',': 37, '1': 28, '9': 16, '8': 6, ')': 12, '[': 14, ']': 14, 'K': 13, 'F': 44, 'G': 53, 'X': 5, 'U': 66, 'V': 20, '3': 2, '4': 4, '5': 5, '6': 3, '0': 36, '\\n': 6, '-': 6, ';': 1, '!': 1, '\"': 8, \"'\": 3, '—': 1 "
    ]
   },
   {
